community-docs/v0.12/modules/ROOT/pages/how-tos-for-operators/cluster-registration.adoc
:doctype: book

= Register Downstream Clusters
:revdate: 2025-07-23
:page-revdate: {revdate}

[#_overview]
== Overview

There are two specific styles to registering clusters. These styles will be referred
to as *agent-initiated* and *manager-initiated* registration. Typically one would
go with the agent-initiated registration but there are specific use cases in which
manager-initiated is a better workflow.

[#_agent_initiated_registration]
=== Agent-Initiated Registration

Agent-initiated refers to a pattern in which the downstream cluster installs an agent with a
<<_create_cluster_registration_tokens,cluster registration token>> and optionally a client ID. The cluster
agent will then make a API request to the {product_name} manager and initiate the registration process. Using
this process the Manager will never make an outbound API request to the downstream clusters and will thus
never need to have direct network access. 

It is not commonly used in Rancher. Rancher does not need to make an outbound API request to the downstream cluster, as it uses a tunnel to provide that connectivity.

[#_manager_initiated_registration]
=== Manager-Initiated Registration

Manager-initiated registration is a process in which you register an existing Kubernetes cluster
with the {product_name} manager and the {product_name} manager will make an API call to the downstream cluster to
deploy the agent. This style can place additional network access requirements because the Fleet
manager must be able to communicate with the downstream cluster API server for the registration process.
After the cluster is registered there is no further need for the manager to contact the downstream
cluster API.  This style is more compatible if you wish to manage the creation of all your Kubernetes
clusters through GitOps using something like https://github.com/kubernetes-sigs/cluster-api[cluster-api]
or https://github.com/rancher/rancher[Rancher].

[options="header"]
|===
| Feature | Agent-Initiated Registration | Manager-Initiated Registration (Rancher Mode)

| **Registration Initiator**
| The downstream cluster initiates the registration process by deploying the agent.
| The Fleet Manager (upstream cluster) initiates the registration process.

| **Prerequisite: Upstream Admin Action**
| **Requires manual administrative action** to create a `ClusterRegistrationToken` resource upstream. This token is required for agent authorization.
| Requires creating a `Cluster` resource in the Fleet Manager that references a Kubernetes **Secret containing a valid kubeconfig** for the downstream cluster.

| **Primary Mechanism**
| Installing the Fleet agent via Helm on the downstream cluster using the manually generated **cluster registration token**.
| The Fleet Controller uses the provided **kubeconfig** to make an API call to the downstream cluster's API server and deploy the agent.

| **Registration Network Direction**
| Communication flows **from** the managed cluster to the Fleet Controller (upstream). This is a PULL mechanism for registration credentials.
| The Manager initiates a connection (PUSH) to the downstream cluster API server to deploy the agent.

| **Network Requirement (Manager)**
| The Fleet Manager **does not need direct inbound** network access to the downstream cluster API. Clusters can run in private networks/behind NATs.
| The Fleet Manager **must be able to communicate directly** with the downstream cluster API server during the registration phase.

| **Network Requirement (Agent)**
| The downstream cluster must be able to make **outbound HTTPS calls** to the Fleet Manager.
| The downstream cluster must be able to make outbound HTTPS calls to the Fleet Manager (post-deployment, for communication and data synchronization).

| **Data Synchronization (Pull)**
| The agent pulls configuration bundles and agent updates from the Fleet Controller (part of the two-stage pull model).
| The agent pulls configuration bundles and agent updates from the Fleet Controller.

| **Agent Management (Push/Redeploy)**
| The upstream controller typically **lacks** the direct network access/credentials required for proactive management actions (PUSH) on the agent deployment.
| The initial deployment mechanism grants the Manager explicit access. This infrastructure can be used for administrative management actions (e.g., triggering deployment using the kubeconfig).

| **Agent Redeployment Control Field**
| The `redeployAgentGeneration` field (on `ClusterSpec`) is **not used** by the upstream controller to trigger redeployment, as the manager lacks the API access necessary to directly manipulate the downstream agent deployment.
| The `redeployAgentGeneration` field on the `ClusterSpec` **can be incremented to force redeployment** of the agent by the Fleet Controller.

| **Agent Adoption Post-Registration**
| After initial registration using the token, the agent is adopted into the standard management lifecycle via bundles created by the `manageagent` controller.
| 

| **Rancher Context**
| This method is **not commonly used** when registering clusters through the Rancher dashboard.
| This method **is used** when adding a cluster via the Rancher dashboard (often via a Rancher agent proxying the downstream kubeconfig upstream).

| **Post-Registration Token Status**
| The agent forgets the registration token after success; a new token must be generated for re-registration.
| N/A; registration token/kubeconfig management is handled internally by the Fleet Manager.

|===

[#_agent_initiated]
== Agent Initiated

A downstream cluster is registered by installing an agent via helm and using the *cluster registration token* and optionally a *client ID* or *cluster labels*.

The cluster resource on upstream does not have a ++kubecConfigSecret++ field, as the Fleet manager does not need to communicate with the downstream cluster API server. However, a bundle for the agent is created and the agent will update itself from the bundle. The bundle uses a different naming scheme, so the downstream cluster will end up with two helm charts.

[IMPORTANT]
====
It's not necessary to configure the Fleet manager for xref:how-tos-for-operators/installation.adoc#_configuration_for_multi_cluster[multi cluster], as the downstream agent we install via Helm will connect to the Kubernetes API of the upstream cluster directly.

Agent-initiated registration is normally not used with Rancher.
====


[#_cluster_registration_token_and_client_id]
=== Cluster Registration Token and Client ID

The *cluster registration token* is a credential that will authorize the downstream cluster agent to be
able to initiate the registration process. This is required.
The xref:explanations/architecture.adoc#_security[cluster registration token] is manifested as a `values.yaml` file that will be passed to the `helm install` process.
Alternatively one can pass the token directly to the helm install command via `--set token="$token"`.

There are two styles of registering an agent. You can have the cluster for this agent dynamically created, in which
case you will probably want to specify *cluster labels* upon registration.  Or you can have the agent register to a predefined
cluster in the {product_name} manager, in which case you will need a *client ID*.  The former approach is typically the easiest.

[#_install_agent_for_a_new_cluster]
=== Install Agent For a New Cluster

The {product_name} agent is installed as a Helm chart. Following are explanations how to determine and set its parameters.

First, follow the <<_create_cluster_registration_tokens,cluster registration token instructions>> to obtain the `values.yaml` which contains
the registration token to authenticate against the {product_name} cluster.

Second, optionally you can define labels that will assigned to the newly created cluster upon registration. After
registration is completed an agent cannot change the labels of the cluster. To add cluster labels add
`--set-string labels.KEY=VALUE` to the below Helm command. To add the labels `foo=bar` and `bar=baz` then you would
add `--set-string labels.foo=bar --set-string labels.bar=baz` to the command line.

[,shell]
----
# Leave blank if you do not want any labels
CLUSTER_LABELS="--set-string labels.example=true --set-string labels.env=dev"
----

Third, set variables with the {product_name} cluster's API Server URL and CA, for the downstream cluster to use for connecting.

[,shell]
----
API_SERVER_URL=https://<API_URL>:6443
API_SERVER_CA_DATA=...
----

If the API server is not listening on the https port (443), the `API_SERVER_URL` should include the port, e.g. `https://<API_URL>:6443`. The URL can be found in the `.kube/config` file.

Value in `API_SERVER_CA_DATA` can be obtained from a `.kube/config` file with valid data to connect to the upstream cluster
(under the `certificate-authority-data` key). Alternatively it can be obtained from within the upstream cluster itself,
by looking up the default ServiceAccount secret name (typically prefixed with `default-token-`, in the default namespace),
under the `ca.crt` key.

[CAUTION]
====

*Use proper namespace and release name*:
For the agent chart the namespace must be `cattle-fleet-system` and the release name `fleet-agent`
====


[CAUTION]
.Kubectl Context
====

*Ensure you are installing to the right cluster*:
Helm will use the default context in `+${HOME}/.kube/config+` to deploy the agent. Use `--kubeconfig` and `--kube-context`
to change which cluster Helm is installing to.
====


[CAUTION]
.{product_name} in Rancher
====
Rancher has separate helm charts for {product_name} and uses a different repository.
====


Add Fleet's Helm repo.

[,shell]
----
helm repo add fleet https://rancher.github.io/fleet-helm-charts/
----

Finally, install the agent using Helm.

[tabs]
====
Install::
+
[,shell]
----
helm -n cattle-fleet-system install --create-namespace --wait \
    --set clientID="$CLUSTER_CLIENT_ID" \
    --values values.yaml \
    fleet-agent fleet/fleet-agent
----

Validate::
+
You can check that status of the fleet pods by running the below commands:
+
[,shell]
----
# Ensure kubectl is pointing to the right cluster kubectl -n cattle-fleet-system logs -l app=fleet-agent kubectl -n cattle-fleet-system get pods -l app=fleet-agent
----

====

The agent should now be deployed.

Additionally you should see a new cluster registered in the {product_name} manager.  Below is an example of checking that a new cluster
was registered in the `clusters` xref:explanations/namespaces.adoc[namespace].  Please ensure your `+${HOME}/.kube/config+` is pointed to the Fleet
manager to run this command.

[,shell]
----
kubectl -n clusters get clusters.fleet.cattle.io
----

----
NAME                   BUNDLES-READY   NODES-READY   SAMPLE-NODE             LAST-SEEN              STATUS
cluster-ab13e54400f1   1/1             1/1           k3d-cluster2-server-0   2020-08-31T19:23:10Z
----

[#_install_agent_for_a_predefined_cluster]
=== Install Agent For a Predefined Cluster

Client IDs are for the purpose of predefining clusters in the {product_name} manager with existing labels and repos targeted to them.
A client ID is not required and is just one approach to managing clusters.
The *client ID* is a unique string that will identify the cluster.
This string is user generated and opaque to the {product_name} manager and agent.  It is assumed to be sufficiently unique. For security reasons one should not be able to easily guess this value
as then one cluster could impersonate another.  The client ID is optional and if not specified the UID field of the `kube-system` namespace
resource will be used as the client ID. Upon registration if the client ID is found on a `Cluster` resource in the {product_name} manager it will associate
the agent with that `Cluster`.  If no `Cluster` resource is found with that client ID a new `Cluster` resource will be created with the specific
client ID.

The {product_name} agent is installed as a Helm chart. The only parameters to the helm chart installation should be the cluster registration token, which
is represented by the `values.yaml` file and the client ID.  The client ID is optional.

First, create a `Cluster` in the {product_name} Manager with the random client ID you have chosen.

[,yaml]
----
kind: Cluster
apiVersion: fleet.cattle.io/v1alpha1
metadata:
  name: my-cluster
  namespace: clusters
spec:
  clientID: "really-random"
----

Second, follow the [cluster registration token instructions]((#create-cluster-registration-tokens) to obtain the `values.yaml` file to be used.

Third, setup your environment to use the client ID.

[,shell]
----
CLUSTER_CLIENT_ID="really-random"
----

[NOTE]
====

*Use proper namespace and release name*:
For the agent chart the namespace must be `cattle-fleet-system` and the release name `fleet-agent`
====


[NOTE]
====

*Ensure you are installing to the right cluster*:
Helm will use the default context in `+${HOME}/.kube/config+` to deploy the agent. Use `--kubeconfig` and `--kube-context`
to change which cluster Helm is installing to.
====


Add Fleet's Helm repo.

[,shell]
----
helm repo add fleet https://rancher.github.io/fleet-helm-charts/
----

Finally, install the agent using Helm.

[tabs]
====
Install::
+
[,shell]
----
helm -n cattle-fleet-system install --create-namespace --wait \
    --set clientID="$CLUSTER_CLIENT_ID" \
    --values values.yaml \
    fleet-agent fleet/fleet-agent
----

Validate::
+
You can check that status of the fleet pods by running the below commands:
+
[,shell]
----
# Ensure kubectl is pointing to the right cluster kubectl -n cattle-fleet-system logs -l app=fleet-agent kubectl -n cattle-fleet-system get pods -l app=fleet-agent
----

====

The agent should now be deployed.

Additionally you should see a new cluster registered in the {product_name} manager.  Below is an example of checking that a new cluster
was registered in the `clusters` xref:explanations/namespaces.adoc[namespace].  Please ensure your `+${HOME}/.kube/config+` is pointed to the Fleet
manager to run this command.

[,shell]
----
kubectl -n clusters get clusters.fleet.cattle.io
----

----
NAME                   BUNDLES-READY   NODES-READY   SAMPLE-NODE             LAST-SEEN              STATUS
my-cluster             1/1             1/1           k3d-cluster2-server-0   2020-08-31T19:23:10Z
----

[#_create_cluster_registration_tokens]
=== Create Cluster Registration Tokens

[IMPORTANT]
====

*Not needed for Manager-initiated registration*:
For manager-initiated registrations the token is managed by the {product_name} manager and does
not need to be manually created and obtained.
====


For an agent-initiated registration the downstream cluster must have a xref:explanations/architecture.adoc#_security[cluster registration token].
Cluster registration tokens are used to establish a new identity for a cluster. Internally
cluster registration tokens are managed by creating Kubernetes service accounts that have the
permissions to create `ClusterRegistrationRequests` within a specific namespace.  Once the
cluster is registered a new `ServiceAccount` is created for that cluster that is used as
the unique identity of the cluster. The agent is designed to forget the cluster registration
token after registration. While the agent will not maintain a reference to the cluster registration
token after a successful registration please note that usually other system bootstrap scripts do.

Since the cluster registration token is forgotten, if you need to re-register a cluster you must
give the cluster a new registration token.

[#_token_ttl]
==== Token TTL

Cluster registration tokens can be reused by any cluster in a namespace.  The tokens can be given a TTL
such that it will expire after a specific time.

[#_create_a_new_token]
==== Create a new Token

The `ClusterRegistationToken` is a namespaced type and should be created in the same namespace
in which you will create `GitRepo` and `ClusterGroup` resources. For in depth details on how namespaces
are used in {product_name} refer to the documentation on xref:explanations/namespaces.adoc[namespaces].  Create a new
token with the below YAML.

[,yaml]
----
kind: ClusterRegistrationToken
apiVersion: "fleet.cattle.io/v1alpha1"
metadata:
    name: new-token
    namespace: clusters
spec:
    # A duration string for how long this token is valid for. A value <= 0 or null means infinite time.
    ttl: 240h
----

After the `ClusterRegistrationToken` is created, {product_name} will create a corresponding `Secret` with the same name.
As the `Secret` creation is performed asynchronously, you will need to wait until it's available before using it.

One way to do so is via the following one-liner:

[,shell]
----
while ! kubectl --namespace=clusters  get secret new-token; do sleep 5; done
----

[#_obtaining_token_value_agent_values_yaml]
==== Obtaining Token Value (Agent values.yaml)

The token value contains YAML content for a `values.yaml` file that is expected to be passed to `helm install`
to install the {product_name} agent on a downstream cluster.

Such value is contained in the `values` field of the `Secret` mentioned above. To obtain the YAML content for the
above example one can run the following one-liner:

[,shell]
----
kubectl --namespace clusters get secret new-token -o 'jsonpath={.data.values}' | base64 --decode > values.yaml
----

Once the `values.yaml` is ready it can be used repeatedly by clusters to register until the TTL expires.

[#_manager_initiated]
== Manager Initiated

The manager-initiated registration flow is accomplished by creating a
`Cluster` resource in the {product_name} Manager that refers to a Kubernetes
`Secret` containing a valid kubeconfig file in the data field called `value`.

[IMPORTANT]
====
If you are using {product_name} standalone _without Rancher_, it must be installed as described in xref:how-tos-for-operators/installation.adoc#_configuration_for_multi_cluster[installation details].

The manager-initiated registration is used when you add a cluster from the Rancher dashboard.
====


[#_create_kubeconfig_secret]
=== Create Kubeconfig Secret

The format of this secret is intended to match the https://cluster-api.sigs.k8s.io/developer/architecture/controllers/cluster#secrets[format] of the kubeconfig
secret used in https://github.com/kubernetes-sigs/cluster-api[cluster-api].
This means you can use `cluster-api` to create a cluster that is dynamically registered with{product_name}.

[,yaml]
----
title="Kubeconfig Secret Example"
kind: Secret
apiVersion: v1
metadata:
  name: my-cluster-kubeconfig
  namespace: clusters
data:
  value: YXBpVmVyc2lvbjogdjEKY2x1c3RlcnM6Ci0gY2x1c3RlcjoKICAgIHNlcnZlcjogaHR0cHM6Ly9leGFtcGxlLmNvbTo2NDQzCiAgbmFtZTogY2x1c3Rlcgpjb250ZXh0czoKLSBjb250ZXh0OgogICAgY2x1c3RlcjogY2x1c3RlcgogICAgdXNlcjogdXNlcgogIG5hbWU6IGRlZmF1bHQKY3VycmVudC1jb250ZXh0OiBkZWZhdWx0CmtpbmQ6IENvbmZpZwpwcmVmZXJlbmNlczoge30KdXNlcnM6Ci0gbmFtZTogdXNlcgogIHVzZXI6CiAgICB0b2tlbjogc29tZXRoaW5nCg==
----

[#_create_cluster_resource]
=== Create Cluster Resource

The cluster resource needs to reference the kubeconfig secret.

[,yaml]
----
title="Cluster Resource Example"
apiVersion: fleet.cattle.io/v1alpha1
kind: Cluster
metadata:
  name: my-cluster
  namespace: clusters
  labels:
    demo: "true"
    env: dev
spec:
  kubeConfigSecret: my-cluster-kubeconfig
----
